[package]
name = "notell"
version = "0.1.0"
authors = ["xanderjakeq <xanderjakeq@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vst = { git = "https://github.com/rustaudio/vst-rs" }

[lib]
name = "notell"
crate-type = ["cdylib"]
